[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Shops/BaseShop/BaseShop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Shops/RepairShop/RepairShop.gd" type="Script" id=2]
[ext_resource path="res://Entities/Shops/RepairShop/textures/idle/repair_shop.png" type="Texture" id=3]
[ext_resource path="res://fontDump/textFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://fontDump/headerFont.tres" type="DynamicFont" id=5]

[node name="RepairShop" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Building" parent="." index="0"]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Background" parent="CanvasLayer/UI" index="0"]
margin_top = -0.840881
margin_bottom = -0.840881
color = Color( 0.133333, 0.623529, 0.258824, 1 )

[node name="Title" type="Label" parent="CanvasLayer/UI" index="1"]
margin_left = 296.377
margin_top = 29.2601
margin_right = 747.377
margin_bottom = 89.2601
custom_fonts/font = ExtResource( 5 )
text = "Repair shop"

[node name="HullTank" type="ProgressBar" parent="CanvasLayer/UI" index="2"]
margin_left = 101.748
margin_top = 327.654
margin_right = 392.748
margin_bottom = 395.654
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HullInfo" type="Label" parent="CanvasLayer/UI/HullTank" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -14.5
margin_right = 27.5
margin_bottom = 14.5
custom_fonts/font = ExtResource( 4 )
text = "100/100"

[node name="btnRepair" type="Button" parent="CanvasLayer/UI" index="3"]
margin_left = 101.0
margin_top = 403.0
margin_right = 393.0
margin_bottom = 465.0
custom_fonts/font = ExtResource( 4 )
text = "Repair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer/UI" index="4"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = -90.0
margin_right = -31.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/UI/btnRepair" to="." method="_on_btnRepair_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Exit" to="." method="_on_Exit_pressed"]
